>Changes from Release 0.0 to release 0.1
---------------------------------------

You must now say "default attribute = permit" instead of
default authorization = permit" when configuring service
defaults

You must now say "default svc = permit" instead of "default
authorization = permit" when configuring service defaults for a user.

When authorizing enable requests, the daemon used to prompt for a
username which it then ignored. It no longer prompts for a username.

Fix recursion issues with service and command lookups. They are now
fully recursive c.f. password lookups.

Add debugging output to password verification to provide information
about expiry processing.

Keep track of longest hash chain we create, for fine tuning. Hash all
keywords into a keyword table instead of doing linear lookup.

Update users_guide to reflect the new configuration syntax.

The convert.pl script now generates the new configuration file syntax.

Accounting code now honours the "more" flag.


Changes from Release 0.1 to release 0.2
---------------------------------------

You can now send a SIGHUP to the daemon to cause it to reinitialize
itself and re-read its CONFIG file. There is a new debugging flag
devoted to this section of the code.

Node types are now pretty-printed in debug output.

The conversion script "convert.pl" now will not print out an expires
field if it doesn't think the syntax of the field is correct. It also
now ignores blank lines in its input files.

When doing authorization, the NAS supplied attribute "cmd=" is now
correctly ignored. This would previously have caused exec
authorization to be denied.

Changes from Release 0.2 to release 0.3
---------------------------------------
Warn when not invoked as uid 0.
Improved Usage message
Add make install target

Changes from Release 0.3 to release 0.4
---------------------------------------
Add TAC_PLUS_PIDFILE to makefile per Andy Linton's suggestion.
Fix bug in authorization code (protocol field needs to be